Sandbox routes now based on root URL

--- a/src/Acme/SandboxBundle/Resources/views/layout.html.twig
+++ b/src/Acme/SandboxBundle/Resources/views/layout.html.twig
@@ -22,7 +22,7 @@
 
             {% block content_header %}
                 <ul id="menu">
-                    <li><a href="{{ path('_sandbox_index') }}">Sandbox Home</a></li>
+                    <li><a href="{{ path('_welcome') }}">Sandbox Home</a></li>
                     <li><a href="{{ path('_sandbox_bundle_friendship') }}">FriendshipBundle Demo</a></li>
                 </ul>
 
